--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=postgres
-DATABASE_DATABASE=postgres
+DATABASE_NAME=postgres
