--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,25 @@ services:
       POSTGRES_DB: ${DATABASE_NAME}
       POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+    volumes:
+      - ./postgres/home-library-database-data:/var/lib/postgresql/data
+      - ./postgres/home-library-database-logs:/var/log/postgresql    
+      
+  home-library:
+    container_name: home-library
+    image: home-library
+    build: .      
+    ports:
+      - ${PORT}:${PORT}
+    environment:
+      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_HOST: ${DATABASE_HOST}
+      POSTGRES_PORT: ${DATABASE_PORT}
+    depends_on:
+      - home-library-database
+    volumes:
+      - .:/app
+    command: npm run start
     
