feat: implement user-defined bridge

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,9 @@ services:
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     volumes:
       - ./postgres/home-library-database-data:/var/lib/postgresql/data
-      - ./postgres/home-library-database-logs:/var/log/postgresql    
+      - ./postgres/home-library-database-logs:/var/log/postgresql
+    networks:
+      - user-defined   
       
   home-library:
     container_name: home-library
@@ -32,4 +34,15 @@ services:
     volumes:
       - .:/app
     command: npm run start
-    
+    networks:
+      - user-defined
+
+volumes:
+  home-library-database-data:
+  home-library-database-logs:
+
+networks:
+  user-defined:
+    name: user-defined
+    driver: bridge
+     
